# astrologico

./: .dockerignore  .env.example  .gitignore  AI_ENHANCEMENT_SUMMARY.md  AI_FEATURES.md  COMPLETION_SUMMARY.txt  DEPLOYMENT.md  DEPRECATED_astrologico.py  Dockerfile  GITHUB_PROJECTS_SETUP.md  GITHUB_READY.txt  GITHUB_UPLOAD.sh  HANDOFF_SUMMARY.md  INSTALLATION_SUMMARY.md  OPERATIONS_RUNBOOK.md  OPTIMIZATION.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PRODUCTION_READINESS_HANDOFF.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT_IMPLEMENTATION.md  SECURITY_FIXES.md  SSH_SETUP_REQUIRED.txt  advanced_analysis.py  ai_interpreter.py  api_client.py  api_server.py  astro_analyzer.py  cli.py  code_sec_auditor.py  docker-compose.prod.yml  docker-compose.yml  install.sh  (+5 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security_report.md
.github/workflows/: dependencies.yml  docker.yml  lint.yml  security.yml  tests.yml
src/astrologico/: __init__.py
src/astrologico/ai/: __init__.py  interpreter.py
src/astrologico/api/: __init__.py  app.py  dependencies.py  error_handling.py  logging_config.py  middleware.py  models.py  server.py  settings.py  utils.py
src/astrologico/api/routes/: __init__.py  ask.py  aspects.py  chart.py  moon.py  planets.py  status.py
src/astrologico/cli/: __init__.py  main.py
src/astrologico/client/: __init__.py  api_client.py
src/astrologico/core/: __init__.py  calculator.py  models.py  serialization.py  types.py
tests/: conftest.py  test_api.py  test_core.py  test_integration.py  test_utils.py
