[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "astrologico"
version = "2.0.0"
description = "Professional astrological calculation suite with AI-powered interpretation and REST API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Astrologico Team", email = "info@astrologico.dev"}
]
keywords = [
    "astrology",
    "astronomy",
    "ephemeris",
    "natal-chart",
    "planetary-positions",
    "ai-interpretation",
    "rest-api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (always installed)
dependencies = [
    "skyfield>=1.54",
    "PyMeeus>=0.5.12",
    "ephem>=4.2.1",
    "astropy>=7.2.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "click>=8.1.7",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# AI providers (OpenAI, Anthropic)
ai = [
    "openai>=1.3.8",
    "anthropic>=0.7.12",
]

# Development dependencies (testing, linting, formatting, documentation)
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.8",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "pylint>=3.0.3",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "httpx>=0.25.2",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
]

# Minimal test dependencies
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/ME0094/astrologico"
Documentation = "https://github.com/ME0094/astrologico#readme"
Repository = "https://github.com/ME0094/astrologico.git"
"Bug Tracker" = "https://github.com/ME0094/astrologico/issues"
Security = "https://github.com/ME0094/astrologico/security/policy"

[project.scripts]
# CLI entry point
astrologico = "src.astrologico.cli.main:main"

[project.gui-scripts]
# API GUI entry point (future use)
# astrologico-gui = "src.astrologico.gui:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astrologico = ["py.typed"]

# ============= Black (Code Formatter) =============
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# ============= Ruff (Fast Python Linter) =============
[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Function call in default argument
]

[tool.ruff.isort]
known-first-party = ["src.astrologico"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are OK

# ============= MyPy (Static Type Checker) =============
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for this phase
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ============= Pytest (Testing Framework) =============
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/astrologico",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests for API endpoints",
    "core: marks tests for core calculation modules",
]

# ============= Coverage Configuration =============
[tool.coverage.run]
branch = true
source = ["src/astrologico"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ============= Pylint Configuration =============
[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

# ============= Bandit (Security Linter) =============
[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = []

# ============= Isort (Import Sorter) =============
[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src.astrologico"]

# ============= Project URLs =============
[tool.pdoc]
docformat = "numpy"
